--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,8 +4,11 @@
     <include src="src/templates/head.html" locals='{"title": "Главная страница"}'></include>
 </head>
 <body>
-  <include src="src/templates/header.html"></include>
+  <!-- <include src="src/templates/header.html"></include>
 
-  <include src="src/templates/footer.html"></include>
+  <include src="src/templates/footer.html"></include> -->
+  <include src="src/templates/main.html"></include>
+  <include src="src/templates/table.html"></include>
+  <script src="../js/app.js"></script>
 </body>
 </html>
