made selectors, fetched options from json

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,6 @@
 
   <include src="src/templates/footer.html"></include> -->
   <include src="src/templates/main.html"></include>
-  <include src="src/templates/table.html"></include>
-  <script src="../js/app.js"></script>
+  <script type="module" src="../js/app.js"></script>
 </body>
 </html>
